--- a/contact.html
+++ b/contact.html
@@ -11,29 +11,35 @@
     <h1>Contact</h1>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/projects.html">Projects</a></li>
+        <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
+        <li class="nav-item"><a class="link" href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="contact-form">
     <form action="/handle-contact-submit" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required />
-      <br />
-      <label for="mail">Email:</label>
-      <input type="email" id="mail" name="email" required />
-      <br />
-      <label for="message">Message:</label>
-      <textarea id="message" name="message"></textarea>
-      <br />
-      <button type="submit">Submit</button>
+      <div class="form-input">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+      </div>
+      <div class="form-input">
+        <label for="mail">Email:</label>
+        <input type="email" id="mail" name="email" required />
+      </div>
+      <div class="form-input">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message"></textarea>
+      </div>
+      <button type="submit">
+        <p class="button-text">Submit</p>
+      </button>
     </form>
   </section>
   
   <footer>
-    <p>&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
+    <p class="footer-text">&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
   </footer>
 </body>
 </html>
