--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <h1>Victoria's Portfolio</h1>
     <nav>
       <ul>
-        <li><a href="/projects.html">Projects</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
+        <li class="nav-item"><a class="link" href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="about">
     <h2>About Me</h2>
-    <img src="https://victoriadarosa.com/static/media/headshot.96ab4c798fe25abc1667.jpg" />
+    <img id="headshot" src="https://victoriadarosa.com/static/media/headshot.96ab4c798fe25abc1667.jpg" alt="headshot of Victoria" />
     <p>I'm a computer engineering student at the University of Waterloo who loves finding creative solutions to problems big and small.</p>
+    <p>This is an example portfolio site for an HTML & CSS workshop I present.</p>
   </section>
 
   <footer>
-    <p>&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
+    <p class="footer-text">&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
   </footer>
 </body>
 </html>
