--- a/projects.html
+++ b/projects.html
@@ -11,25 +11,30 @@
     <h1>Projects</h1>
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
+        <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
+        <li class="nav-item"><a class="link" href="/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="projects">
     <h2>SunRush</h2>
-    <img src="https://victoriadarosa.com/static/media/sunrush.0124c755c8c3137b9eb4.png" />
+    <img class="project-img" src="https://victoriadarosa.com/static/media/sunrush.0124c755c8c3137b9eb4.png" />
     <p>An educational augmented reality adventure game designed to combat summer learning loss in young children. I developed all server-side functionality and API routes with Next, client-side components with React and Tailwind CSS, AR features with A-Frame and AR.js, and location-based services with the Google Places API. I also enabled storage capabilities with MongoDB Atlas and AWS S3, implemented authentication with Auth0, and configured CI/CD pipelines with GitHub Actions, Vercel, and GoDaddy. 1st place overall at ElleHacks 2024.</p>
-    <a href="https://devpost.com/software/sunrush">Devpost</a>
+    <div class="project-link">
+      <a class="link" href="https://devpost.com/software/sunrush">Devpost</a>
+    </div>
     <h2>Hive-HQ</h2>
-    <img src="https://victoriadarosa.com/static/media/hive-hq.622771efb4b48e187bc1.png" />
+    <img class="project-img" src="https://victoriadarosa.com/static/media/hive-hq.622771efb4b48e187bc1.png" />
     <p>An enterprise management tool that monitors and improves the safety of a store or public area against COVID-19, tracking foot traffic and displaying a live heat map overlaid on a floor plan. I created a high-fidelity mockup of the site with Figma and implemented its design and logic with React and JavaScript. Winner of Best Entrepreneurship Hack and Best Use of Google Cloud at Hack the North 2021.</p>
-    <a href="https://devpost.com/software/hive-hq">Devpost</a>
+    <div class="project-link">
+      <a class="link" href="https://devpost.com/software/hive-hq">Devpost</a>
+    </div>
   </section>
   
   <footer>
-    <p>&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
+    <p class="footer-text">&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
   </footer>
 </body>
 </html>
