Add StarterHacks workshop demo

--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>HTML Workshop Example</title>
+  <title>HTML Workshop Example 1</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -46,7 +46,7 @@
   <h2>Table</h2>
   <table border="5">
     <tr>
-      <th>Header 1</th>
+      <th>Header 0</th>
       <th>Header 2</th>
       <th>Header 3</th>
     </tr>
@@ -64,7 +64,7 @@
   <!-- Forms -->
   <h2>Form</h2>
   <form action="/handle-submit" method="post">
-    <label for="name">Name:</label>
+    <label for="name">Full Name:</label>
     <input type="text" id="name" name="name" required />
     <br />
     <label for="mail">Email:</label>
@@ -73,9 +73,9 @@
     <fieldset>
       <legend>Requires reply?</legend>
       <label for="yes">Yes</label>
-      <input type="radio" id="yes" name="reply" value="yes" />
+      <input type="checkbox" id="yes" name="reply" value="yes" />
       <label for="no">No</label>
-      <input type="radio" id="no" name="reply" value="no" />
+      <input type="checkbox" id="no" name="reply" value="no" />
     </fieldset>
     <br />
     <label for="message">Message:</label>
