--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <title>Victoria's Portfolio</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Victoria's Portfolio - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Victoria's Portfolio</h1>
-    <nav>
-      <ul>
-        <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
-        <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
-        <li class="nav-item"><a class="link" href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>Victoria's Portfolio</h1>
+  <nav>
+    <ul>
+      <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
+      <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
+    </ul>
+  </nav>
 
   <section id="about">
     <h2>About Me</h2>
-    <img id="headshot" src="https://victoriadarosa.com/static/media/headshot.96ab4c798fe25abc1667.jpg" alt="headshot of Victoria" />
-    <p>I'm a computer engineering student at the University of Waterloo who loves finding creative solutions to problems big and small.</p>
-    <p>This is an example portfolio site for an HTML & CSS workshop I present.</p>
+    <img src="https://victoriadarosa.com/static/media/headshot.96ab4c798fe25abc1667.jpg" />
+    <p>Hi! I'm Victoria, a web developer based in New York City. I specialize in front-end development and have experience with HTML, CSS, and JavaScript. I'm currently looking for new opportunities, so feel free to reach out!</p>
   </section>
-
-  <footer>
-    <p class="footer-text">&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
-  </footer>
 </body>
 </html>
