--- a/projects.html
+++ b/projects.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+  <title>Victoria's Portfolio - Projects</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Victoria's Portfolio - Projects</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Projects</h1>
-    <nav>
-      <ul>
-        <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
-        <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
-        <li class="nav-item"><a class="link" href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>Projects</h1>
+  <nav>
+    <ul>
+      <li class="nav-item"><a class="link" href="file:///C:/Users/Victoria/Documents/GitHub/html-css-workshop/index.html">Home</a></li>
+      <li class="nav-item"><a class="link" href="file:///C:/Users/Victoria/Documents/GitHub/html-css-workshop/projects.html">Projects</a></li>
+    </ul>
+  </nav>
 
   <section id="projects">
-    <h2>SunRush</h2>
-    <img class="project-img" src="https://victoriadarosa.com/static/media/sunrush.0124c755c8c3137b9eb4.png" />
-    <p>An educational augmented reality adventure game designed to combat summer learning loss in young children. I developed all server-side functionality and API routes with Next, client-side components with React and Tailwind CSS, AR features with A-Frame and AR.js, and location-based services with the Google Places API. I also enabled storage capabilities with MongoDB Atlas and AWS S3, implemented authentication with Auth0, and configured CI/CD pipelines with GitHub Actions, Vercel, and GoDaddy. 1st place overall at ElleHacks 2024.</p>
+    <h2>My Project Name</h2>
+    <img src="https://res.cloudinary.com/devex/image/fetch/c_scale,f_auto,q_auto,w_720/https://lh4.googleusercontent.com/VQyrPPyh-FGdV2BJtlcwDphesnxERD6SLWvGtARygLDVNSsXhFF0kzG_yXvLyiARZbKIG3VYF_CIbF4_B-Wy3Eu7kKhHKKR3pq_2ob2pdZgxt_Wz_uqXjRMrhIBKREQnJo--Ui9b" />
+    <p>Project description goes here.</p>
     <div class="project-link">
-      <a class="link" href="https://devpost.com/software/sunrush">Devpost</a>
+      <a class="link" href="#">View Project</a>
     </div>
-    <h2>Hive-HQ</h2>
-    <img class="project-img" src="https://victoriadarosa.com/static/media/hive-hq.622771efb4b48e187bc1.png" />
-    <p>An enterprise management tool that monitors and improves the safety of a store or public area against COVID-19, tracking foot traffic and displaying a live heat map overlaid on a floor plan. I created a high-fidelity mockup of the site with Figma and implemented its design and logic with React and JavaScript. Winner of Best Entrepreneurship Hack and Best Use of Google Cloud at Hack the North 2021.</p>
+
+    <h2>My Project Name</h2>
+    <img src="https://res.cloudinary.com/devex/image/fetch/c_scale,f_auto,q_auto,w_720/https://lh4.googleusercontent.com/VQyrPPyh-FGdV2BJtlcwDphesnxERD6SLWvGtARygLDVNSsXhFF0kzG_yXvLyiARZbKIG3VYF_CIbF4_B-Wy3Eu7kKhHKKR3pq_2ob2pdZgxt_Wz_uqXjRMrhIBKREQnJo--Ui9b" />
+    <p>Project description goes here.</p>
     <div class="project-link">
-      <a class="link" href="https://devpost.com/software/hive-hq">Devpost</a>
+      <a class="link" href="#">View Project</a>
+    </div>
+
+    <h2>My Project Name</h2>
+    <img src="https://res.cloudinary.com/devex/image/fetch/c_scale,f_auto,q_auto,w_720/https://lh4.googleusercontent.com/VQyrPPyh-FGdV2BJtlcwDphesnxERD6SLWvGtARygLDVNSsXhFF0kzG_yXvLyiARZbKIG3VYF_CIbF4_B-Wy3Eu7kKhHKKR3pq_2ob2pdZgxt_Wz_uqXjRMrhIBKREQnJo--Ui9b" />
+    <p>Project description goes here.</p>
+    <div class="project-link">
+      <a class="link" href="#">View Project</a>
     </div>
   </section>
-  
-  <footer>
-    <p class="footer-text">&copy; 2024 Victoria Da Rosa. All rights reserved.</p>
-  </footer>
 </body>
 </html>
