--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <h1>Victoria's Portfolio</h1>
   <nav>
     <ul>
-      <li class="nav-item"><a class="link" href="/index.html">Home</a></li>
-      <li class="nav-item"><a class="link" href="/projects.html">Projects</a></li>
+      <li class="nav-item"><a class="link" href="/html-css-workshop/index.html">Home</a></li>
+      <li class="nav-item"><a class="link" href="/html-css-workshop/projects.html">Projects</a></li>
     </ul>
   </nav>
 
